# StableAvatar

./: .gitignore  LICENSE.txt  README.md  app.py  audio_extractor.py  finetune_1B_rec_vec.sh  finetune_1B_rec_vec_64.sh  finetune_1B_rec_vec_lora.sh  inference.py  inference.sh  lip_mask_extractor.py  multiple_gpu_inference.sh  pyproject.toml  requirements.txt  test_torch.py  train_14B.py  train_14B.sh  train_14B_lora.py  train_14B_lora.sh  train_1B_rec_vec.py  train_1B_rec_vec.sh  train_1B_rec_vec_64.sh  train_1B_rec_vec_lora.py  train_1B_rec_vec_lora.sh  train_1B_rec_vec_lora_64.sh  train_1B_square.py  train_1B_square.sh  train_1B_square_64.sh  vocal_seperator.py
accelerate_config/: accelerate_config_machine_14B_multiple.yaml  accelerate_config_machine_1B_multiple.yaml
checkpoints/: .gitattributes  README.md
checkpoints/Wan2.1-Fun-V1.1-1.3B-InP/: .gitattributes  configuration.json
deepspeed_config/: zero2_offload_cpu.json  zero_stage2_config.json  zero_stage3_config.json
docs/: Installation.md
wan/: __init__.py  image2video.py
wan/dataset/: talking_video_dataset_fantasy.py
wan/models/: attention_processor.py  cache_utils.py  motion_controller.py  motion_to_bucket.py  vocal_projector_fantasy.py  vocal_projector_fantasy_14B.py  vocal_projector_fantasy_1B.py  wan_fantasy_transformer3d_14B.py  wan_fantasy_transformer3d_1B.py  wan_image_encoder.py  wan_transformer3d.py  wan_vae.py  wav2vec.py
wan/pipeline/: pipeline_wan_fun_inpaint.py  wan_inference_long_pipeline.py  wan_inference_pipeline_fantasy.py
wan/utils/: color_correction.py  discrete_sampler.py  fp8_optimization.py  lora_utils.py  utils.py
