[project]
name = "stableavatar"
version = "1.0.0"
description = "Description"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.1",
    "albumentations",
    "audio-separator[gpu]>=0.30.2",
    "beautifulsoup4",
    "dashscope",
    "datasets",
    "decord",
    "diffusers==0.30.1",
    "easydict",
    "einops",
    "ftfy",
    "gradio>=5.0.0",
    "huggingface-hub[cli]>=0.34.5",
    "imageio[ffmpeg]",
    "imageio[pyav]",
    "imageio-ffmpeg",
    "librosa",
    "moviepy==1.0.3",
    "ninja",
    "numpy>=1.23.5,<2",
    "omegaconf",
    "opencv-python>=4.9.0.80",
    "Pillow",
    "safetensors",
    "scikit-image",
    "SentencePiece",
    "tensorboard",
    "timm",
    "tokenizers>=0.20.3",
    "tomesd",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchdiffeq",
    "torchsde",
    "torchvision==0.22.0",
    "tqdm",
    "transformers==4.51.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["F"]
ignore = []

[tool.uv]
compile-bytecode = true
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[tool.uv.extra-build-dependencies]
flash-attn = ["numpy", "torch"]

[tool.uv.pip]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
